# sbpf-analyzer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: framework-comparison.md  screenshot.html
src/: analyzer.rs  baseline.rs  cost_model.rs  debug_info.rs  lib.rs  loader.rs  main.rs  multi_program.rs  patterns.rs  report.rs
tests/: test_cost_model.rs  test_integration.rs  test_loader.rs
tests/helpers/: mod.rs
