[package]
name = "sbpf-analyzer"
version = "0.1.0"
edition = "2021"
description = "Static compute unit analyzer for Solana sBPF bytecode"
license = "Apache-2.0"
repository = "https://github.com/illegalcall/sbpf-analyzer"
homepage = "https://github.com/illegalcall/sbpf-analyzer"
keywords = ["solana", "sbpf", "compute-units", "static-analysis", "bytecode"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "sbpf-analyze"
path = "src/main.rs"

[dependencies]
solana-sbpf = "0.16"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
anyhow = "1"
gimli = "0.31"
object = "0.36"
rustc-demangle = "0.1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
